[project]
name = "MLCSim"
version = "0.2"
description = "Tools for researching and simulating multi-level cells (MLCs)"
authors = [
    {name="Margret Riegert", email="margret@eowyn.net"}
]
dependencies = [
    "argparse ~= 1.4.0",
    "matplotlib ~= 3.5.1",
    "numpy ~= 1.22.3",
    "scipy ~= 1.7.3",
    "lazydocs ~= 0.4.8",
    "mkdocs ~= 1.3.0",
    "mkdocs-awesome-pages-plugin ~= 2.7.0",
    "black ~= 22.3.0",
    "docstr-coverage ~= 2.2.0"
]

readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Home = "https://github.com/nobodywasishere/MLCSim"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"